--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="row">
         <div class="col-lg-2"></div>
         <div class="col-lg-8">
-          <form>
+          <form id="form">
             <div class="form-group">
               <label for="formGroupExampleInput">Todo</label>
               <input
@@ -39,12 +39,17 @@
         </div>
         <div class="col-lg-2"></div>
       </div>
+      <br />
       <div class="row">
         <div class="col-lg-2"></div>
         <div class="col-lg-8">
           <ul class="list-group" id="display"></ul>
         </div>
         <div class="col-lg-2"></div>
+      </div>
+
+      <div class="alert" role="alert" id="message">
+        This is a danger alert—check it out!
       </div>
     </div>
 
@@ -70,6 +75,23 @@
         const display = $("#display");
         const form = $("#form");
         const todoUserInput = $("#todoUserInput");
+        const message = $("#message");
+        message.hide();
+
+        const displayMessage = (flag, msg) => {
+          //successfull
+          if (flag) {
+            message.removeClass("alert-danger");
+            message.addClass("alert-success");
+            message.html(msg);
+            message.show();
+          } else {
+            message.removeClass("alert-success");
+            message.addClass("alert-danger");
+            message.html(msg);
+            message.show();
+          }
+        };
 
         const getTodos = () => {
           fetch("/getTodos", { method: "get" })
@@ -89,12 +111,12 @@
         };
 
         const editTodo = (todo, todoID, editID) => {
-          let editBtn = $(`${editID}`);
+          let editBtn = $(`#${editID}`);
           editBtn.click(() => {
             fetch(`/${todo._id}`, {
               method: "PUT",
               headers: {
-                "Content-Type": "application/json; charset=utf8",
+                "Content-Type": "application/json; charset=utf-8",
               },
               body: JSON.stringify({ todo: todoUserInput.val() }),
             })
@@ -138,21 +160,23 @@
 
         const buildTemplate = (todo, ids) => {
           return `<li class="list-group-item" id="${ids.listItemID}">
-                <div class="col-md-4" id="${ids.todoID}">${todo.todo}</div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4 text-right">
-                    <button type="button" class="btn btn-secondary" id="${ids.editID}">Edit</button>
-                    <button type="button" class="btn btn-danger" id="${ids.deleteID}">Delete</button>
+                    <div class="row">
+                        <div class="col-md-4" id="${ids.todoID}">${todo.todo}</div>
+                        <div class="col-md-4"></div>
+                        <div class="col-md-4 text-right">
+                            <button type="button" class="btn btn-secondary" id="${ids.editID}">Edit</button>
+                            <button type="button" class="btn btn-danger" id="${ids.deleteID}">Delete</button>
+                        </div>
                     </div>
-            </li>`;
+                  </li>`;
         };
 
         const displayTodos = (data) => {
           data.forEach((todo) => {
             let ids = buildIDS(todo);
             display.append(buildTemplate(todo, ids));
-            editTodo(todo, ids.todoID, ids, editID);
-            deleteTodo(todo, ids.listItemID.ids.deleteID);
+            editTodo(todo, ids.todoID, ids.editID);
+            deleteTodo(todo, ids.listItemID, ids.deleteID);
           });
         };
 
@@ -166,16 +190,22 @@
             },
           })
             .then((response) => {
+              console.log(response);
               return response.json();
             })
             .then((data) => {
-              if (data.result.ok == 1 && data.result.n == 1) {
-                let ids = buildIDS(data.document);
-                display.append(buildTemplate(data.document, ids));
-                editTodo(data.document, ids.todoID, ids.editID);
-                deleteTodo(data.document, ids.listItemID, ids.deleteID);
+              if (!data.error) {
+                if (data.result.ok == 1 && data.result.n == 1) {
+                  let ids = buildIDS(data.document);
+                  display.append(buildTemplate(data.document, ids));
+                  editTodo(data.document, ids.todoID, ids.editID);
+                  deleteTodo(data.document, ids.listItemID, ids.deleteID);
+                  displayMessage(true, data.msg);
+                }
+              } else {
+                displayMessage(false, data.error.message);
+                resetTodosInput();
               }
-              resetTodosInput();
             });
         });
       });
